--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -3,7 +3,7 @@ name: Webapp Linting
 on:
   push:
     branches:
-      - master
+      - main
       - develop
       - release*
     paths:
@@ -15,7 +15,7 @@ on:
 
   pull_request:
     branches:
-      - master
+      - main
       - develop
       - release*
     tags:
