--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: webapp-linting
+      - name: prettier-linting
         run: |
           ls
           npm ci
