--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "lint:fix": "vue-cli-service lint --fix",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "lint": "eslint --ext .js,.vue src",
+    "lint:fix": "npm run lint:js & npm run lint:scss",
+    "lint:js": "eslint --ext .js,.vue src --fix",
+    "lint:scss": "prettier --write 'src/**/*.{scss, css}'"
   },
   "main": "background.js",
   "dependencies": {
