--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -22,10 +22,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Build electron
+      - name: Install and build electron
         run: |
+          ls
+          npm ci
           npm run electron:build
-
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
