--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Build project # This would actually build your project, using zip for an example artifact
         run: |
-          zip --junk-paths release-${{ github.ref }} vue-recorder**
+          zip --junk-paths release-${{ github.ref }}-appimage dist_electron/vue-recorder**.AppImage
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -51,6 +51,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./release-${{ github.ref }}.zip
-          asset_name: release-${{ github.ref }}.zip
+          asset_path: ./release-${{ github.ref }}.AppImage
+          asset_name: release-${{ github.ref }}dist_electron/vue-recorder**.AppImage
           asset_content_type: application/zip
