Checkout should be first step

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: [14.x]
 
     steps:
-      - name: Build app
+      - name: Checkout code
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -36,16 +36,14 @@ jobs:
           npm run build
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Checkout code
-        uses: actions/checkout@v2
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-      - name: Zip project # This would actually build your project, using zip for an example artifact
+      - name: Zip Release # This would actually build your project, using zip for an example artifact
         run: |
           ls
           ls dist_electron/
-          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}-appimage.zip dist_electron/vue-electron-recorder*
+          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}.zip dist_electron/vue-electron-recorder*
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -63,6 +61,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./release-${{ steps.get_version.outputs.VERSION }}-appimage.zip
+          asset_path: ./release-${{ steps.get_version.outputs.VERSION }}.zip
           asset_name: release-${{ steps.get_version.outputs.VERSION }}.zip
           asset_content_type: application/zip
