--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -38,9 +38,23 @@ jobs:
       - name: Get the version
         id: get_version
         run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
-      - name: Zip Release # This would actually build your project, using zip for an example artifact
+
+      - name: Zip Release Linux Snap # This would actually build your project, using zip for an example artifact
         run: |
-          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}.zip dist_electron/vue-electron-recorder*
+          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}-snap.zip dist_electron/vue-electron-recorder*.snap dist_electron/vue-electron-recorder*.deb dist_electron/vue-electron-recorder*.AppImage
+
+      - name: Zip Release Linux AppImage # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}-appimage.zip dist_electron/vue-electron-recorder*.snap dist_electron/vue-electron-recorder*.deb dist_electron/vue-electron-recorder*.AppImage
+
+      - name: Zip Release Linux Deb # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}-deb.zip dist_electron/vue-electron-recorder*.deb
+
+      - name: Zip Release Windows # This would actually build your project, using zip for an example artifact
+        run: |
+          zip --junk-paths release-${{ steps.get_version.outputs.VERSION }}-windows.zip dist_electron/vue-electron-recorder*.exe*
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -51,13 +65,47 @@ jobs:
           release_name: Release ${{ steps.get_version.outputs.VERSION }}
           draft: false
           prerelease: false
-      - name: Upload Release Asset
-        id: upload-release-asset
+
+      - name: Upload Release Snap
+        id: upload-release-asset-snap
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: ./release-${{ steps.get_version.outputs.VERSION }}.zip
-          asset_name: release-${{ steps.get_version.outputs.VERSION }}.zip
+          asset_path: ./dist_electron/release-${{ steps.get_version.outputs.VERSION }}-snap.zip
+          asset_name: release-${{ steps.get_version.outputs.VERSION }}-snap.zip
+          asset_content_type: application/zip
+
+      - name: Upload Release AppImage
+        id: upload-release-asset-appimage
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./dist_electron/release-${{ steps.get_version.outputs.VERSION }}-appimage.zip
+          asset_name: release-${{ steps.get_version.outputs.VERSION }}-appimage.zip
+          asset_content_type: application/zip
+
+      - name: Upload Release Deb
+        id: upload-release-asset-deb
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./dist_electron/release-${{ steps.get_version.outputs.VERSION }}-deb.zip
+          asset_name: release-${{ steps.get_version.outputs.VERSION }}-deb.zip
+          asset_content_type: application/zip
+
+      - name: Upload Release Windows
+        id: upload-release-asset-windows
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+          asset_path: ./dist_electron/release-${{ steps.get_version.outputs.VERSION }}-windows.zip
+          asset_name: release-${{ steps.get_version.outputs.VERSION }}-windows.zip
           asset_content_type: application/zip
